--- a/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
+++ b/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.29.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
@@ -14,6 +15,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Services\ProductImageServices\" />
+    <Folder Include="Services\ProductDetailServices\" />
   </ItemGroup>
 
 </Project>
